OpenHome/Net/Bindings/C/ControlPoint/CpService.h

/**
 * @addtogroup CpService
 * @ingroup ControlPoint
 * @{
 */

/**
 * Opaque handle to a service
 */
typedef THandle CpService;
/**
 * Opaque handle to an invocation
 */
typedef THandle CpInvocationC;
/**
 * Create a service for use by a client of the control point stack
 *
 * @param[in] aDomain   Domain for the vendor who defined the service
 * @param[in] aName     Name of the service
 * @param[in] aVersion  Version number of the service
 * @param[in] aDevice   Device which advertised the service
 *
 * @return  Handle to the service
 */
DllExport CpService STDCALL CpServiceCreate(const char* aDomain, const char* aName, uint32_t aVersion, CpDeviceC aDevice);
/**
 * Destroy a service
 *
 * @param[in] aService  Returned by CpServiceCreate
 */
DllExport void STDCALL CpServiceDestroy(CpService aService);
/**
 * Invoke an action
 *
 * This function returns immediately.  Invocation of the action on a remote device is asynchronous.
 * 'aCallback' passed to CpServiceInvocation is run when the invocation completes.
 *
 * @param[in] aService     Returned by CpServiceCreate
 * @param[in] aInvocation  Returned by CpServiceInvocation
 */
DllExport void STDCALL CpServiceInvokeAction(CpService aService, CpInvocationC aInvocation);