OpenHome/Net/Bindings/Cs/ControlPoint/CpService.cs


    /// <summary>
    /// Used by CpProxy to represent a service offered by a remote device.  Only intended for use by auto-generated proxies.
    /// </summary>
    public class CpService
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr CpServiceCreate(IntPtr aDomain, IntPtr aName, uint aVersion, IntPtr aDevice);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void CpServiceDestroy(IntPtr aService);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void CpServiceInvokeAction(IntPtr aService, IntPtr aInvocation);

        private IntPtr iHandle;
        private List<Invocation> iActiveInvocations;

        /// <summary>
        /// Constructor.  Only intended for use by CpProxy.
        /// </summary>
        /// <param name="aHandle"></param>
        internal CpService(IntPtr aHandle)
        {
            iHandle = aHandle;
            iActiveInvocations = new List<Invocation>();
        }

        /// <summary>
        /// Request an invocation object prior to setting input/output arguments
        /// </summary>
        /// <param name="aAction">Action which will be invoked</param>
        /// <param name="aCallback">Delegate to run when the action completes</param>
        /// <returns>Invocation object, ready to receive input and output arguments</returns>
        public Invocation Invocation(OpenHome.Net.Core.Action aAction, CpProxy.CallbackAsyncComplete aCallback)
        {
            Invocation invocation = new Invocation(this, aAction.Handle(), aCallback);
            lock (this)
            {
                iActiveInvocations.Add(invocation);
            }
            return invocation;
        }

        /// <summary>
        /// Invoke an action
        /// </summary>
        /// <param name="aInvocation">Invocation object, with all input and output arguments added</param>
        public void InvokeAction(Invocation aInvocation)
        {
            CpServiceInvokeAction(iHandle, aInvocation.Handle());
        }

        internal void InvocationComplete(Invocation aInvocation)
        {
            IntPtr handle = aInvocation.Handle();
            lock (this)
            {
                for (int i=0; i<iActiveInvocations.Count; i++)
                {
                    if (iActiveInvocations[i].Handle() == handle)
                    {
                        iActiveInvocations.RemoveAt(i);
                        break;
                    }
                }
            }
        }

        internal IntPtr Handle()
        {
            return iHandle;
        }
    }
}
